Add control for if computer plays 1st or 2nd

--- a/Connect4/app.css
+++ b/Connect4/app.css
@@ -1,11 +1,4 @@
-﻿#difficultyLabel.grayed,
-#difficultyValue.grayed,
-#boardWidthLabel.grayed,
-#widthValue.grayed,
-#boardHeightLabel.grayed,
-#heightValue.grayed,
-#connectNumLabel.grayed,
-#connectNumValue.grayed {
+﻿.grayed {
     color: gray;
 }
 
